# easyAIoT

./: .gitignore  CMakeLists.txt  LICENSE  TODO  main.c  readme.md
APP/: APPConfig.c  APPConfig.h  BankCard.c  BankCard.h  FaceCompare.c  FaceCompare.h  IDCard.c  IDCard.h  SmartSpeaker.c  SmartSpeaker.h  iat.c  iat.h  igr.c  igr.h  itr.c  itr.h  its.c  its.h  nlp.c  nlp.h  ntp.c  ntp.h  tts.c  tts.h
Algo/: vad.c  vad.h
Audio/: AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h
Audio/Linux/: pcm.c  tinycap.c  tinycap.h
Audio/Linux/tinyalsa/: pcm.c  tinycap.c  tinycap.h
Audio/WIN/: VoiceBase.cpp  VoiceBase.h  VoicePlaying.cpp  VoicePlaying.h  VoiceRecording.cpp  VoiceRecording.h  WavHeader.h  WavManager.cpp  WavManager.h  WavRecord.cpp  WavRecord.h  common.h  main.cpp  windows_wave_tutorial.txt
Common/: SimpleThread.c  SimpleThread.h  base64.c  base64.h  cJSON_user_define.h  cstring.c  cstring.h  date.c  date.h  file.c  file.h  hmac_sha256.c  hmac_sha256.h  iFlyAuth.c  iFlyAuth.h  md5.c  md5.h  ntp.h  ringbuffer.h  sha256.c  sha256.h  urlencode.c  urlencode.h
Doc/: vscode快捷键.md  命名规范.md
Net/: EIHttpClient.c  EIHttpClient.h  EILog.h  EIPlatform.h  EISock.c  EISock.h  EIString.c  EIString.h  EasyIoT.c  EasyIoT.h  urldecode.c  urldecode.h  urlencode.c  urlencode.h  wsclient.c  wsclient.h
Res/: copy.pcm  test.pcm  test2.pcm  tts.pcm
test/: FaceCompare.h  test.c
